<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_margin="@dimen/dp8"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--        1-->
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"></LinearLayout>
        <!--        2-->
        <LinearLayout
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp0">
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp0">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_logo"
                    android:src="@mipmap/logo_shop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp0"></LinearLayout>
        </LinearLayout>
        <!--        4-->
        <LinearLayout
            android:layout_weight="4.5"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp0">
            <LinearLayout
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/dp5"
                android:layout_marginVertical="@dimen/dp5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp0">
                <EditText
                    android:id="@+id/edt_username"
                    android:text="user a"
                    android:hint="@string/str_username"
                    android:background="@drawable/bg_edt"
                    android:paddingLeft="@dimen/dp8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="@drawable/bg_edt"
                android:layout_marginHorizontal="@dimen/dp5"
                android:layout_marginVertical="@dimen/dp5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp0">
                <LinearLayout
                    android:layout_weight="4"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/edt_password"
                        android:text="123456"
                        android:hint="@string/str_password"
                        android:background="@color/transparent"
                        android:paddingLeft="@dimen/dp8"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lnl_show_hide"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/img_show_hide"
                        android:src="@drawable/icon_eye_show"
                        android:layout_width="25dp"
                        android:layout_height="25dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center|end"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp0">
                <TextView
                    android:id="@+id/txt_forget_password"
                    android:text="@string/str_forget_pass"
                    android:textColor="@color/bg_green"
                    android:textSize="@dimen/sp17"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="@dimen/dp5"
                    android:layout_marginVertical="@dimen/dp5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1.5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp0">
                <Button
                    android:id="@+id/btn_login"
                    android:text="@string/str_login"
                    android:background="@drawable/bg_btn"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout

                android:layout_weight="1"
                android:gravity="center|end"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp0">
                <TextView
                    android:text="@string/str_no_account"
                    android:textColor="@color/bg_green"
                    android:textSize="@dimen/sp13"
                    android:layout_marginHorizontal="@dimen/dp5"
                    android:layout_marginVertical="@dimen/dp5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txt_register"
                    android:text="@string/str_register_now"
                    android:textColor="@color/bg_green"
                    android:textSize="@dimen/sp17"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="@dimen/dp5"
                    android:layout_marginVertical="@dimen/dp5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <!--        3-->
        <LinearLayout
            android:layout_weight="2.5"
            android:layout_width="match_parent"
            android:layout_height="0dp"></LinearLayout>
    </LinearLayout>

</LinearLayout>